Mon Mar 21 12:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lite.h:
          Always define ACE_TEMPLATE_SPECIALIZATION as template<>
          and ACE_TEMPLATE_CLASS_MEMBER_SPECIALIZATION as nothing.
          All compilers we support do support this syntax and we
          are updating our code to juse template<> instead of the
          macro. When ACE_LACKS_DEPRECATED_MACROS is defined these
          defines are not set making it easy to detect places where
          deprecated macros are used.

        * ace/Atomic_Op.h:
        * ace/Condition_Recursive_Thread_Mutex.h:
        * ace/Functor.h:
        * ace/Functor_String.h:
        * ace/Null_Mutex.h:
        * ace/Process_Semaphore.h:
        * ace/Select_Reactor.h:
        * ace/Thread_Semaphore.h:
          Use template<> instead of ACE_TEMPLATE_SPECIALIZATION

Fri Mar 18 22:40:30 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* m4/config_h.m4:

	  Remove unused ACE_LACKS_SYSTIMES_H autoheader template.

	  Remove ACE_HAS_SIG_ATOMIC_T autoheader template.  The
	  description is provided by the AC_DEFINE in the check.

	* m4/platform.m4:

	  Add ACE_SIZE_T_FORMAT_SPECIFIER and ACE_SSIZE_T_FORMAT_SPECIFIER
	  definitions for Linux in ACE_CHECK_FORMAT_SPECIFIERS.  Processor
	  specific values taken from config-linux-common.h.

	  Remove ACE_UINT64_FORMAT_SPECIFIER definition for Linux from
	  ACE_SET_PLATFORM_MACROS.

Fri Mar 18 22:36:28 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:
	* m4/config_h.m4:

	  Use ACE_CHECK_LACKS_FUNCS instead of AC_CHECK_FUNC/AC_DEFINE for
	  inet_aton().

Fri Mar 18 14:13:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* Kokyu/Makefile.am:
	* ace/Makefile.am:
	* ace/QoS/Makefile.am:
	* ace/SSL/Makefile.am:
	* protocols/ace/HTBP/Makefile.am:
	* protocols/ace/RMCast/Makefile.am:
	* protocols/ace/TMCast/Makefile.am:

	  Regenerate.

	* Kokyu/Kokyu.mpc:

	  Inherit from core.
	  Add pkgconfig_files section.
